bid_sorting_added
